--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-VITE_BASE_URL="localhost:8080/api/v1"
+VITE_BASE_URL="http://localhost:8080/api/v1"
 VITE_PROVINCE_API='https://provinces.open-api.vn/api/?depth=2'
 VITE_RECAPTCHA_KEY='6Ld3aE4pAAAAABtNUCN7pfYbgLql40-sI2hIMOND'
