--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@tanstack/react-query": "^5.17.9",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.49.3",
+    "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.8",
